Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80262

SCXML StateMachine state properties get incorrect values if History is used

XMLWordPrintable

    • Windows
    • 8
    • 50815b095f (qt/qtscxml/dev) 50815b095f (qt/tqtc-qtscxml/dev) c42f20dae2 (qt/qtscxml/6.4) c42f20dae2 (qt/qtscxml/6.4.1) c42f20dae2 (qt/tqtc-qtscxml/6.4) c42f20dae2 (qt/tqtc-qtscxml/6.4.1) 0dc7c2878b (qt/tqtc-qtscxml/6.2) 29c25449e7 (qt/tqtc-qtscxml/5.15)
    • Foundation Sprint 68, Foundation Sprint 69

      The properties of a scxml state machine seem to be broken if "History" is added to the .scxml chart. Submitting an event to the state machine results in a correct state change. There are property changes as well like expected but the property values don't match the active states at all. The property values are initially correct.

      Steps to reproduce:

      1. Run the attached project
      2. Click on "S01 => S1" to change state from S0 to S1 & monitor the output

      (as a result the state machine logs "S1" as active state but the S1 property remains false. This does not occur if history (History_1) is removed from the .scxml chart)

        1. qtbug80262.zip
          3 kB
          Miika Pernu
        2. image-2020-05-03-21-14-07-887.png
          25 kB
          Hanno Kolvenbach
        3. image-2020-05-03-21-14-07-773.png
          65 kB
          Hanno Kolvenbach
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vuokko Juha Vuolle
            miikapernu Miika Pernu
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes